# thenexusengine

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN_IDR_AB_TESTING.md  README.md  bid-request-analyzer-spec.docx  docker-compose.prod.yml  docker-compose.yml  nexus-engine-docker-setup.md  nexus-engine-idr-prd.md  pyproject.toml  run_admin.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
config/: idr_config.yaml
config/publishers/: example-hierarchical.yaml  example.yaml
demo/: README.md  index.html
docker/idr/: Dockerfile
docker/pbs/: Dockerfile
docker/timescaledb/: init.sql
docker/timescaledb/migrations/: 001_add_revenue_share.sql
docs/: COOKIE_SYNC_IMPLEMENTATION_PLAN.md  PBS_PREBID_ADAPTER_RESEARCH.md  docker-setup.md  lightsail-deployment.md  multi-tenant-setup.md  ortb-bidder-integration.md  publisher-integration.md  publisher-onboarding-operations.md  publisher-quickstart.md
docs/api/: openapi.yaml
docs/runbooks/: alerting.md  on-call.md  rollback.md
fly/: PRODUCTION_SETUP.md  deploy.sh  idr.toml  pbs.toml
monitoring/: health_monitor.sh  uptime_config.md
pbs/: go.mod  go.sum
pbs/cmd/server/: main.go
pbs/internal/adapters/: adapter.go  adapter_test.go  helpers.go  helpers_test.go  registry.go  registry_test.go
pbs/internal/adapters/33across/: 33across.go
pbs/internal/adapters/adform/: adform.go
pbs/internal/adapters/appnexus/: appnexus.go  appnexus_test.go
pbs/internal/adapters/beachfront/: beachfront.go
pbs/internal/adapters/conversant/: conversant.go
pbs/internal/adapters/criteo/: criteo.go
pbs/internal/adapters/demo/: demo.go
pbs/internal/adapters/gumgum/: gumgum.go
pbs/internal/adapters/improvedigital/: improvedigital.go
pbs/internal/adapters/ix/: ix.go  ix_test.go
pbs/internal/adapters/medianet/: medianet.go
pbs/internal/adapters/openx/: openx.go  openx_test.go
pbs/internal/adapters/ortb/: ortb.go  ortb_test.go  registry.go
pbs/internal/adapters/outbrain/: outbrain.go
pbs/internal/adapters/pubmatic/: pubmatic.go  pubmatic_test.go
pbs/internal/adapters/rubicon/: rubicon.go  rubicon_test.go
pbs/internal/adapters/sharethrough/: sharethrough.go
pbs/internal/adapters/smartadserver/: smartadserver.go
pbs/internal/adapters/sovrn/: sovrn.go
pbs/internal/adapters/spotx/: spotx.go
pbs/internal/adapters/taboola/: taboola.go
pbs/internal/config/: constants.go
pbs/internal/container/: service.go  service_test.go  types.go
pbs/internal/endpoints/: auction.go  auction_test.go  cookie_sync.go  cookie_sync_test.go  cookiesync.go  setuid.go  setuid_test.go
pbs/internal/exchange/: exchange.go  exchange_test.go
pbs/internal/fpd/: eid_filter.go  eid_filter_test.go  models.go  processor.go  processor_test.go
pbs/internal/metrics/: prometheus.go  prometheus_test.go
pbs/internal/middleware/: auth.go  auth_test.go  cors.go  cors_test.go  gzip.go  gzip_test.go  privacy.go  privacy_test.go  publisher_auth.go  publisher_auth_test.go  ratelimit.go  ratelimit_test.go  security.go  security_test.go  sizelimit.go  sizelimit_test.go
pbs/internal/openrtb/: request.go  request_test.go  response.go  response_test.go
pbs/internal/usersync/: bidder_syncers.go  config.go  cookie.go  cookie_test.go  gdpr.go  gdpr_test.go  syncer.go  syncer_test.go  types.go
pbs/pkg/idr/: circuitbreaker.go  circuitbreaker_test.go  client.go  client_test.go  events.go
pbs/pkg/logger/: logger.go
pbs/pkg/redis/: client.go
pbs/tests/integration/: pbs_idr_integration_test.go
prebid-adapter/modules/: nexusBidAdapter.js  nexusBidAdapter.md  tneBidAdapter.js  tneBidAdapter.md
scripts/: deploy-lightsail.sh
src/: __init__.py
src/idr/: __init__.py  logging.py
src/idr/admin/: __init__.py  app.py
src/idr/auth/: __init__.py  api_keys.py
src/idr/bidders/: __init__.py  manager.py  models.py  storage.py
src/idr/classifier/: __init__.py  request_classifier.py
src/idr/config/: __init__.py  config_api.py  config_resolver.py  config_store.py  feature_config.py  publisher_config.py
src/idr/database/: __init__.py  event_pipeline.py  metrics_store.py  redis_client.py  timescale_client.py
src/idr/models/: __init__.py  bidder_metrics.py  bidder_score.py  classified_request.py  lookup_key.py
src/idr/privacy/: __init__.py  consent_models.py  privacy_filter.py
src/idr/scorer/: __init__.py  bidder_scorer.py
src/idr/selector/: __init__.py  partner_selector.py
src/idr/utils/: __init__.py  constants.py  id_generator.py  user_agent.py
tests/: __init__.py  test_bidder_scorer.py  test_bidders.py  test_hierarchical_config.py  test_id_generator.py  test_partner_selector.py  test_privacy.py  test_redis_sampling.py  test_request_classifier.py
tests/load/: auction.js
(+13 files in other folders)
